    ADDED: support for xz archives

    FIXED: View displays wrong total size in some circumstances.

2.3.0-beta1 "New Horizons"
==========================

    ADDED: option: Panel > General > Flat Origin Bar
    ADDED: option: Panel > Buttons > Toolbar buttons have icons
    ADDED: listpanel buttons: Back, Forward
    ADDED: options: Panel > Layout >
           Layout / Frame Color / Frame Shape / Frame Shadow
    ADDED: QuickFilter - default shortcut: CTRL+i
    ADDED: option: Panel > View > Show directories first
    ADDED: actions: Back/Forward in history
    ADDED: action: Set Focus to the Panel - shortcut: ESC
    ADDED: actions: Move Focus Up/Down - shortcut: CTRL+SHIFT+Up/Down
    ADDED: selection dialog option: Apply selection to directories
    ADDED: option: Startup > User Interface > Update default panel settings
    ADDED: dbus interface: org.krusader.Instance.openUrl(QString url)
    ADDED: search dialog > feed to listbox:
           search parameters are saved as metadata in the virtual fs and
           displayed in panel's statusbar
    ADDED: filter option: Apply filter to directories
    ADDED: action: view > Apply settings to other tabs
    ADDED: action: view > Save settings as default (for new instances of this
           view type)
    ADDED: option: Panel > View > Locale aware sorting

  CHANGED: Media Button shows Solid Icon for currently opened device
  CHANGED: Removed options Panel > General > Status/Totalsbar >
           Statusbar Frame / Statusbar Background / Show Statusbar /
           Show Totalsbar. They are customizable in layout.xml.
  CHANGED: Use KrView for displaying search results,
           which is much faster than the previously used QTreeWidget.
  CHANGED: Removed default shortcuts for the Left/Right Bookmarks actions,
           as they conflict with the Back/Forward actions.
  CHANGED: After failed refresh, only focus location bar if the url was entered
           manually.