@@ -43,6 +43,7 @@
    <Action name="select all" />
    <Action name="unselect all" />
    <Action name="invert" />
+   <Action name="restore_selection" />
    <Separator/>
    <Action name="compare dirs" />
    <Menu name="compare setup">
