@@ -1,3 +1,4 @@
+    ADDED: action: Restore Selection
     ADDED: support for xz archives
 
     FIXED: View displays wrong total size in some circumstances.
